2009-03-12  Jorge Gonzalez  <jorgegonz@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php:
	Modified the XMLTPC_TIMEOUT to 50.

2009-03-02  Sancho Lerena  <slerena@artica.es>

	* export_csv.php: Ported changes from trunk here. Solves problems
	reported.

	* functions_db.php: Solved problems when no group is passed in function
	get_agents_in_group().
	
2009-02-24  Sancho lerena   <slerena@artica.es>

	* pandoradb_data.sql,
	include/config_process.php,
	include/functions_db.php
	include/config.inc.php
	index.php: Updated version and headers.

	* pandora_console_upgrade: New script to upgrade pandora from 2.0 to 2.1
	
2009-02-26  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Updated get_agent_module_sla() to
	fix monitor values which doesn't require a max value.

	* operation/agentes/sla_view.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/reporting_xml.php: Updated to changes in
	get_agent_module_sla().

2009-02-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/index.pot: Updated po template.

	* include/languages/pt_BR.po, include/languages/pt_BR.mo,
	  include/languages/de.po, include/languages/de.mo: Updated
	  translations from Rosetta.

2009-02-03  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/status_monitor.php: Use get_user_groups() to
	get the groups instead of querying the database directly. Style
	correction. Set the time once before entering the loop.

2009-02-02  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Removed an unneccesary "k"
	character on top of file.

2009-01-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* godmode/agentes/module_manager_editor_wmi.php: Fixed two bugs; the
	  first one made the module_type 'generic_data' appear twice, the
	  second one didn't show the correct 'generic_data' when selecting a
	  prebuild WMI component.

2009-01-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
