@@ -1,3 +1,15 @@
+2009-03-10  Sancho Lerena  <slerena@artica.es>
+
+	* include/config_process.php: Added charset support for output in PDF, XML
+	and other future uses.
+	
+	* include/functions.php: Added safe_html() for rendering to PDF, XML, etc.
+	
+	* operation/reporting/reporting_xml.php: Fixed issues with encoding, using
+	the new functions. Fixed old bug with SLA reporting.
+	
+	* godmode/setup/setup.php: Added charset token to config.
+
 2009-03-12  Jorge Gonzalez  <jorgegonz@artica.es>
 
 	* extensions/update_manager/lib/libupdate_manager_client.php:
